fix: adjust Home section padding to prevent layout overlap

--- a/style.css
+++ b/style.css
@@ -10,34 +10,29 @@
 html {
     scroll-behavior: smooth;
 }
-
-
 body{
   font-family: "Poppins", sans-serif;
   font-size: 18px;
 }
-
-header{
-    display: flex;
-    justify-content:space-around;
-    margin-top: 40px;
-    cursor: pointer;
-    background-color: black;
-    padding: 20px;
-    color: white;
-    width: 65%;
-    margin-left: 350px;
-    border-radius: 20px;
-    top: 0px;
-    position: fixed;
+main{
+    height: 80vh;
+    padding-top: 80px;
+}
+header {
+  display: flex;
+  justify-content:space-evenly; 
+  cursor: pointer;
+  background-color: black; 
+  padding:10px; 
+  color: white;
+  width: 100%; 
+  top: 0px;
+  position: fixed;           /* keeps it above content */
 }
 nav{
     display: flex;
-    margin-top: 10px;
+    margin-top: 5px;
 }
-
-
-
 li {
     list-style: none;
     margin-left: 30px;
@@ -52,9 +47,7 @@ a{
     font-weight: 600;
 
 }
-main{
-    height: 60vh;
-}
+
 .home-container{
     display: flex;
     justify-content: space-evenly;
